--- a/Simple_dataBase_UI Individual/Simple_dataBase_UI_Individual.csproj
+++ b/Simple_dataBase_UI Individual/Simple_dataBase_UI_Individual.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
