--- a/Simple_dataBase_UI Individual/Simple_dataBase_UI_Individual.csproj
+++ b/Simple_dataBase_UI Individual/Simple_dataBase_UI_Individual.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
   </ItemGroup>
 
