--- a/Simple_dataBase_UI Individual/Simple_dataBase_UI_Individual.csproj
+++ b/Simple_dataBase_UI Individual/Simple_dataBase_UI_Individual.csproj
@@ -12,10 +12,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
+    <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Models\Customer.cs" />
   </ItemGroup>
 
 </Project>
